environments/dev/auth-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo
  namespace: shop-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: shop-platform
spec:
  selector:
    app: auth-mongo
  ports:
    - port: 27017
      targetPort: 27017
