environments/dev/cart-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-redis
  namespace: shop-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-redis
  template:
    metadata:
      labels:
        app: cart-redis
    spec:
      containers:
        - name: redis
          image: redis:7
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: cart-redis
  namespace: shop-platform
spec:
  type: ClusterIP
  selector:
    app: cart-redis
  ports:
    - port: 6379
      targetPort: 6379
