environments/dev/cart-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: shop-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: sanketdesai09/cart-service:d01ee40
          imagePullPolicy: Always
          ports:
            - containerPort: 6001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: shop-platform
spec:
  type: ClusterIP
  selector:
    app: cart-service
  ports:
    - port: 6001
      targetPort: 6001
