environments/dev/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: shop-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: sanketdesai09/order-service:25c6374
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: shop-platform
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 7000
      targetPort: 7000
